syntax = "proto3";

option java_package = "electionguard.protogen";
option java_outer_classname = "PlaintextBallotProto";

// The original input ballot.
message PlaintextBallot {
  string ballot_id = 1; // a unique ballot ID created by the external system
  string ballot_style_id = 2; // matches a BallotStyle.ballot_style_id
  repeated PlaintextBallotContest contests = 3;
  int64 sn = 5; // must be > 0 if it exists
  string errors = 4; // error messages from processing, eg when invalid
}

message PlaintextBallotContest {
  string contest_id = 1; // matches the ContestDescription.contest_id
  uint32 sequence_order = 2;
  repeated PlaintextBallotSelection selections = 3;
  repeated string write_ins = 4; // used for write-in candidate(s)
}

message PlaintextBallotSelection {
  string selection_id = 1; // matches the SelectionDescription.selection_id
  uint32 sequence_order = 2;
  uint32 vote = 3;  // 0 or 1
}
